content/_generated-doc/2.7/config/quarkus-kubernetes-config-group-traffic-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-traffic-config_configuration]]link:#quarkus-kubernetes-config-group-traffic-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-traffic-config_quarkus.knative.traffic.-traffic-.tag]]`link:#quarkus-kubernetes-config-group-traffic-config_quarkus.knative.traffic.-traffic-.tag[quarkus.knative.traffic."traffic".tag]`

[.description]
--
Tag is optionally used to expose a dedicated url for referencing this target exclusively.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-traffic-config_quarkus.knative.traffic.-traffic-.revision-name]]`link:#quarkus-kubernetes-config-group-traffic-config_quarkus.knative.traffic.-traffic-.revision-name[quarkus.knative.traffic."traffic".revision-name]`

[.description]
--
RevisionName of a specific revision to which to send this portion of traffic.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-traffic-config_quarkus.knative.traffic.-traffic-.latest-revision]]`link:#quarkus-kubernetes-config-group-traffic-config_quarkus.knative.traffic.-traffic-.latest-revision[quarkus.knative.traffic."traffic".latest-revision]`

[.description]
--
LatestRevision may be optionally provided to indicate that the latest ready Revision of the Configuration should be used for this traffic target. When provided LatestRevision must be true if RevisionName is empty.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-traffic-config_quarkus.knative.traffic.-traffic-.percent]]`link:#quarkus-kubernetes-config-group-traffic-config_quarkus.knative.traffic.-traffic-.percent[quarkus.knative.traffic."traffic".percent]`

[.description]
--
Percent indicates that percentage based routing should be used and the value indicates the percent of traffic that is be routed to this Revision or Configuration. `0` (zero) mean no traffic, `100` means all traffic.
--|long 
|`100`

|===